--- a/index.html
+++ b/index.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Dicoding Indonesia Website</title>
-</head>
-<body>
-  <main>
-    <h1>Dicoding Indonesia</h1> 
-    <h2>Gudangnya developer handal</h2>
-    <p>Mencetak banyak lulusan terbaik khususnya para developer.</p> 
-  </main>
-</body>
+		<title>Munyukers</title>
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+		<link rel="stylesheet" type="text/css" href="style munyukers.css">
+	<head/>
+
+	<body>
+		<div class="container">
+			<div class = "menu">
+					<img class = "logo" src = "logomanutd2.png">
+					<now>HOME</now>
+					<a href="Man Utd First Team.html">PLAYERS</a>
+					<a>LEAGUE TABLE</a>
+					<a>FIXTURES</a>
+					<a>OLD TRAFFORD</a><now></now><now></now><now></now><now></now><now></now><now></now><now></now>
+					<a href = "signfrom.html">SIGN IN</a>
+			</div>
+			<img class = "logo_home" src="logomanutd2.png">
+			<?php include 'username.php';?>
+		</div>
+	</body>
+
 </html>
