--- a/index.html
+++ b/index.html
@@ -1,25 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-		<title>Munyukers</title>
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-		<link rel="stylesheet" type="text/css" href="style munyukers.css">
-	<head/>
-
-	<body>
-		<div class="container">
-			<div class = "menu">
-					<img class = "logo" src = "logomanutd2.png">
-					<now>HOME</now>
-					<a href="Man Utd First Team.html">PLAYERS</a>
-					<a>LEAGUE TABLE</a>
-					<a>FIXTURES</a>
-					<a>OLD TRAFFORD</a><now></now><now></now><now></now><now></now><now></now><now></now><now></now>
-					<a href = "signfrom.html">SIGN IN</a>
-			</div>
-			<img class = "logo_home" src="logomanutd2.png">
-			<?php include 'username.php';?>
-		</div>
-	</body>
-
+    <style>
+        head
+        {
+            text-align: center;
+            background-color: #73838F;
+            padding: 5px;
+            position: sticky;
+            top: 0;
+        }
+    </style>
+    <head>
+        <ul>
+            <li><a href="#">Intro</a></li>
+            <li><a href="#pendidikan">Education</a></li>
+            <li><a href="#skill">Skill</a></li>
+            <li><a href='#pengalaman'>Experience</a></li>
+        </ul>
+    </head>
 </html>
