--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap');
-        head
+        nav
         {
             text-align: center;
             background-color: #73838F;
@@ -12,11 +12,13 @@
         }
     </style>
     <head>
-        <ul>
-            <li><a href="#">Intro</a></li>
-            <li><a href="#pendidikan">Education</a></li>
-            <li><a href="#skill">Skill</a></li>
-            <li><a href='#pengalaman'>Experience</a></li>
-        </ul>
+        <nav>
+            <ul>
+                <li><a href="#">Intro</a></li>
+                <li><a href="#pendidikan">Education</a></li>
+                <li><a href="#skill">Skill</a></li>
+                <li><a href='#pengalaman'>Experience</a></li>
+            </ul>
+        </nav>
     </head>
 </html>
