--- a/index.html
+++ b/index.html
@@ -10,6 +10,26 @@
             position: sticky;
             top: 0;
         }
+        
+        nav a
+        {
+            font-size: 18px;
+            font-weight: 400;
+            text-decoration: none;
+            color: white;
+        }
+
+        nav a:hover
+        {
+            font-weight: bold;
+        }
+
+        nav li
+        {
+            display: inline;
+            list-style-type: none;
+            margin-right: 20px;
+        }
     </style>
     <head>
         <nav>
