--- a/Tugas3-Pweb-Warteg/index.html
+++ b/Tugas3-Pweb-Warteg/index.html
@@ -1,1 +1,78 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <link rel="stylesheet" href="styles.css">
+        <title>Web Warung Tegal</title>
+    </head>
 
+    <body>
+        <div class="wrapper">
+            <header>
+                <h1>Warung Tegal</h1>
+                <nav>
+                    <ul>
+                        <li><a href="" class="current">beranda</a></li>
+                        <li><a href="">daftar masakan</a></li>
+                        <li><a href="">katering</a></li>
+                        <li><a href="">tentang</a></li>
+                        <li><a href="">kontak</a></li>
+                    </ul>
+                </nav>
+            </header>
+
+            <section class="courses">
+                <article>
+                    <figure>
+                        <img src="images/soto.jpg" alt="soto">
+                        <figcaption>Soto Indonesia</figcaption>
+                    </figure>
+
+                    <hgroup>
+                        <h2>Soto Ayam</h2>
+                        <h3>Makanan Berkuah</h3>
+                    </hgroup>
+                    <p>Soto ayam adalah makanan khas Indonesia yang berupa sejenis sup ayam dengan kuah yang berwarna kekuningan.</p>
+                </article>
+
+                <article>
+                    <figure>
+                        <img src="images/pecel.jpg" alt="pecel">
+                        <figcaption>Pecel Indonesia</figcaption>
+                    </figure>
+
+                    <hgroup>
+                        <h2>Masakan Pecel</h2>
+                        <h3>Makanan dengan Bumbu Kacang</h3>
+                    </hgroup>
+                    <p>Pecel adalah makanan yang menggunakan bumbu sambal kacang sebagai bahan utamanya yang dicampur dengan aneka jenis sayuran.</p>
+                </article>
+            </section>
+
+            <aside>
+                <section class="pupolar-recipes">
+                    <h2>Masakan Popular</h2>
+                    <a href="">Sayur Sop</a>
+                    <a href="">Sayur Asem</a>
+                    <a href="">Sayur Lodeh</a>
+                    <a href="">Sayur Bayam</a>
+                </section>
+
+                <section class="contact-details">
+                    <h2>Kontak</h2>
+                    <p>Warung Tegal<br>
+                        di seluruh Indonesia
+                    </p>
+                </section>
+
+                <section class="review">
+                    <h2>Ulasan Makanan</h2>
+                    <iframe  src="https://www.youtube.com/embed/t0zE2nSE5Mo" title="YouTube video player" width="240px" height="150px" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </section>
+            </aside>
+
+            <footer>
+                &copy; 2021 Warung Tegal
+            </footer>
+        </div><!--.wrapper-->
+    </body>
+</html>
